--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,3 +1,4 @@
+<?xml version="1.0"?>
 <ruleset name="WordPress Coding Standards for Gravatar Plugin">
   <description>
     Sniffs for WordPress plugins, with minor modifications for Gravatar Plugin
@@ -28,4 +29,4 @@
   <exclude-pattern>./build</exclude-pattern>
   <exclude-pattern>./vendor</exclude-pattern>
   <exclude-pattern>./node_modules</exclude-pattern>
-</ruleset>;
+</ruleset>
